[gd_scene load_steps=6 format=3 uid="uid://bm04ksfkksar3"]

[ext_resource type="FontFile" uid="uid://dqcg2lyi5660" path="res://Assets/Fonts/Next Sunday.otf" id="1_blb7b"]
[ext_resource type="Script" path="res://Main/game_over_popup.gd" id="1_gmxip"]

[sub_resource type="Theme" id="Theme_6rk8w"]
default_font = ExtResource("1_blb7b")

[sub_resource type="LabelSettings" id="LabelSettings_xpek7"]
font_size = 19

[sub_resource type="Theme" id="Theme_17eca"]
default_font = ExtResource("1_blb7b")
default_font_size = 20

[node name="GameOverPopup" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 360.0
offset_top = 300.0
offset_right = -360.0
offset_bottom = -180.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gmxip")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.580392, 0.129412, 0.415686, 1)

[node name="BoxContainer" type="BoxContainer" parent="ColorRect"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 48.0
offset_right = -48.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_6rk8w")
theme_override_constants/separation = 30
alignment = 1
vertical = true

[node name="Label1" type="Label" parent="ColorRect/BoxContainer"]
layout_mode = 2
text = "Completion Time: 53 Seconds"
label_settings = SubResource("LabelSettings_xpek7")
vertical_alignment = 1

[node name="Label2" type="Label" parent="ColorRect/BoxContainer"]
layout_mode = 2
text = "Best Time: 40 Seconds"
label_settings = SubResource("LabelSettings_xpek7")
vertical_alignment = 1

[node name="ColorRect" type="ColorRect" parent="ColorRect/BoxContainer"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
color = Color(0.262745, 0, 0.403922, 1)

[node name="Button" type="Button" parent="ColorRect/BoxContainer/ColorRect"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_17eca")
theme_type_variation = &"FlatButton"
theme_override_constants/outline_size = 0
text = "PLAY AGAIN"

[connection signal="pressed" from="ColorRect/BoxContainer/ColorRect/Button" to="." method="_on_button_pressed"]
